fix: Fixed configuration handling
Signed-off-by: dhoard <doug.hoard@gmail.com>